--- a/src/Controls/samples/Controls.Sample/Pages/Layouts/LayoutIsEnabledPage.xaml
+++ b/src/Controls/samples/Controls.Sample/Pages/Layouts/LayoutIsEnabledPage.xaml
@@ -22,6 +22,7 @@
                 <Label
                     Text="All childrens are disabled"/>
                 <StackLayout
+                    IsEnabled="False"
                     BackgroundColor="LightPink"
                     Padding="12">
                     <Button 
