Use tooltip text in sample

--- a/src/Controls/samples/Controls.Sample/Pages/Controls/ButtonPage.xaml
+++ b/src/Controls/samples/Controls.Sample/Pages/Controls/ButtonPage.xaml
@@ -13,6 +13,8 @@
                     Style="{StaticResource Headline}"/>
                 <Button
                     Text="Button"/>
+                <Button
+                    Text="Button with Tooltip" TooltipText="This is a tooltip!" />
                 <Label
                     Text="Disabled"
                     Style="{StaticResource Headline}"/>
