--- a/src/Controls/samples/Controls.Sample/Pages/Controls/LabelPage.xaml
+++ b/src/Controls/samples/Controls.Sample/Pages/Controls/LabelPage.xaml
@@ -14,6 +14,8 @@
                 <Label
                     Text="Label"/>
                 <Label
+                    Text="Label with Tooltip" TooltipText="This has a tooltip!" />
+                <Label
                     Text="TextColor"
                     Style="{StaticResource Headline}"/>
                 <Label
